--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.13.0",
+    "scss": "^0.2.4",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
